--- a/admin_new/css/general.css
+++ b/admin_new/css/general.css
@@ -1,5 +1,87 @@
+* {
+    box-sizing: initial;
+}
+
 body {
     background-color: #f3f5f9;
     margin: 0;
-    height: 750px;
+    height: auto;
+}
+
+h4 {
+    margin: 25px 0 25px 0;
+}
+
+.container {
+    width: 80%;
+    padding: 20px;
+    font-size: 25px;
+    padding-bottom: 45px;
+}
+
+.section {
+    padding: 20px 20px 20px 40px;
+    background-color: #efebd2;
+    width: 97%;
+    border-radius: 15px;
+    box-shadow: 0px 0px 8px 0px rgb(105, 105, 105);
+}
+
+.section h5 {
+    margin: 0 0 10px 0;
+}
+
+.section .category {
+    margin-bottom: 20px;
+}
+
+form {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+form input[type = "text"], form textarea {
+    height: 25px;
+    width: 40%;
+}
+
+form .button {
+    width: 100px;
+    height: 35px;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    font-weight: 500;
+    background-color: #de4063;
+    cursor: pointer;
+}
+
+form .button-drop {
+    text-align: left;
+    width: 40%;
+    height: 25px;
+    color: white;
+    font-weight: 500;
+}
+
+form .button:hover {
+    opacity: 0.8;
+    color: black;
+}
+
+.scroll-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50px;
+    color: black;
 }
