--- a/admin_new/css/header.css
+++ b/admin_new/css/header.css
@@ -4,7 +4,12 @@
     justify-content: space-between;
     height: 50px;
     padding: 10px;
-    background-color: white;
+    background-color: #032F4F;
+    color: white;
+}
+
+.header a {
+    color: white;
 }
 
 a {
@@ -16,18 +21,19 @@ a {
     height: 50px;
 }
 
-.nav {
+.nav-bar {
     display: flex;
     list-style-type: none;
     width: auto;
     height: auto;
     font-weight: 900;
+    margin: 0;
 }
 
-.nav li {
+.nav-bar li {
     width: auto;
     height: 30px;
-    margin: 20px;
+    margin: auto;
     display: flex;
     padding: 10px;
     align-items: center;
@@ -35,12 +41,12 @@ a {
     border-radius: 10px;
 }
 
-.nav li:hover {
-    background-color: #38b589;
+.nav-bar li:hover {
+    background-color: #FACB0F;
 }
 
-.nav li:hover a {
-    color: white;
+.nav-bar li:hover a {
+    color: black;
 }
 
 .admin {
@@ -59,5 +65,5 @@ a {
 
 .log-out:hover {
     font-weight: 900;
-    color: #38b589;
+    color: #FACB0F;
 }
