--- a/Front-end/css/about.css
+++ b/Front-end/css/about.css
@@ -1,11 +1,12 @@
 #about{
     width:100%;
-    height:1000px;
-    background-size: contain;
-    background-image: url(/img/About-us/about-1.jpg);
+    height:150vh;
+    background-size: 100%;
+    background-image: url(../img/About-us/about-1.jpg);
     background-color: transparent;
     background-repeat: no-repeat;
     position: relative;
+    
 }
 #about .content{
     position: absolute;
@@ -19,10 +20,12 @@
 #about .aboutContent{
     background-color: rgba(31, 30, 30, 0.671);
     width:400px;
-    height: 500px;
+    height: 500px;   
+    
+    
     position: absolute;
     bottom: 0;
-    right: 50px;
+    right:50px;
     box-shadow: 5px 5px 5px 5px rgba(171, 166, 166, 0.63);
     color:white;
     
