--- a/admin_new/css/general.css
+++ b/admin_new/css/general.css
@@ -42,9 +42,13 @@ form {
     font-size: 20px;
 }
 
-form input[type = "text"], form textarea {
+form input, form textarea {
     height: 25px;
     width: 40%;
+}
+
+form input[type = 'file'] {
+    height: auto
 }
 
 form .button {
