--- a/admin_new/css/header.css
+++ b/admin_new/css/header.css
@@ -39,6 +39,7 @@ a {
     align-items: center;
     justify-content: center;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .nav-bar li:hover {
