--- a/Front-end/css/category.css
+++ b/Front-end/css/category.css
@@ -98,7 +98,7 @@
     font-size: large;
 }
 
-.filter-board .menu-item:hover {
+.filter-board .menu-item:hover, .filter-board .menu-item.active {
     background-color: #C3C2C2;
     color: white;
 }
@@ -124,6 +124,7 @@
     width: 22%;
     background-color: transparent;
     padding: 0;
+    overflow: hidden;
 }
 
 .product-list .item .watch-image {
@@ -131,6 +132,10 @@
     height: 300px;
     top: 0;
     left: 0;
+}
+
+.product-list .item .watch-image:hover {
+    transform: scale(1.05);
 }
 
 .product-list .item .watch-name {
