--- a/Front-end/css/product.css
+++ b/Front-end/css/product.css
@@ -1,6 +1,8 @@
 #product{
-   margin-top: 25px;
-   margin-left: 64px; 
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
     
 }
 #product .card {
