Category Layout Finish

--- a/Front-end/css/category.css
+++ b/Front-end/css/category.css
@@ -1,3 +1,5 @@
+/* ---------- The Carousel ----------*/
+
 .owl-carousel {
     margin-bottom: 20px;
 }
@@ -23,6 +25,8 @@
 .item .watch-name {
     font-weight: 500;
 }
+
+/* ---------- ----------*/
 
 .filter {
     display: flex;
@@ -57,6 +61,8 @@
     border: none;
     cursor: pointer;
 }
+
+/* ---------- Filter Menu on the side ----------*/
 
 .filter-board {
     border: 1px solid gray;
@@ -103,6 +109,8 @@
     color: white;
 }
 
+/* ---------- Filter Board ----------*/
+
 .filter-board .board {
     width: 75%;
     padding: 20px;
@@ -118,6 +126,100 @@
 .board .check {
     margin-bottom: 10px;
 }
+
+/* ---------- Two Side Slider for Price----------*/
+
+.slider {
+    position: relative;
+}
+
+.slider-track {
+    width: 100%;
+    height: 5px;
+    /* background-color: #C3C2C2; */
+    position: absolute;
+    top: 20px;
+    border-radius: 5px;
+}
+
+.slider input[type="range"] {
+    width: 100%;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    position: absolute;
+    pointer-events: none;
+    top: 15px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-moz-range-track {
+    -webkit-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-ms-track {
+    -webkit-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: #FFFFFF;
+    border: 3px solid #FBCF23;
+    border-radius: 50%;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-top: -3px;
+}
+
+input[type="range"]::-moz-range-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: #FFFFFF;
+    border: 3px solid #FBCF23;
+    border-radius: 50%;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-top: -3px;
+}
+
+input[type="range"]::-ms-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    background-color: #FFFFFF;
+    border: 3px solid #FBCF23;
+    border-radius: 50%;
+    cursor: pointer;
+    pointer-events: auto;
+    margin-top: -3px;
+}
+
+.board .values {
+    display: flex;
+    position: relative;
+    top: 50px;
+    justify-content: space-between;
+}
+
+.values input[type = "text"] {
+    width: 150px;
+    height: 35px;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+
+/* ---------- Product List ----------*/
 
 .product-list {
     width: 100%;
