--- a/Front-end/css/header.css
+++ b/Front-end/css/header.css
@@ -1,21 +1,26 @@
+
 header {
     background-color: white;
     height:120px;
     width: 100%;
-    display: flex;
-    
-    
-    
+    display: flex;  
+       
 }
 .brand {
     line-height: 120px;
     font-size: 32px;
-    margin-left: 32px;
+    margin-left: 6px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    
+}
+.logoBrand{
+    height:60px;
+    margin-bottom: 5px;
 }
 .menu {
-    position: absolute;
-    
+    position: absolute;    
     right:300px;
+    
 }
 .menu ul{
     list-style-type: none;
@@ -45,11 +50,7 @@ header a:hover{
 .un:hover {
     border-color: black;
 }
-.search-btn{
-    position: absolute;
-    right:50px;
-    top:50px;
-}
+
 #logReg{
     position: absolute;
     width:160px;
