--- a/css/product.css
+++ b/css/product.css
@@ -3,7 +3,26 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
+
+}
+#product a{
+    text-decoration: none;
     
+}
+#product button{
+    margin-bottom: 10px;
+}
+#product .productBanner{
+    background-image: url(../img/product/bannerproduct.png);
+    background-size:100%;
+    height: 0px;
+    padding-bottom: 50%;
+    width: 100%;
+    background-repeat: no-repeat;
+    margin-bottom: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #product .card {
     margin-bottom: 20px;
@@ -42,3 +61,43 @@
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 46px;
 }
+/* @media (max-width:900px ){
+    #product .productBanner{
+        background-image: url(../img/product/bannerproduct.png);
+        background-size:100%;
+        height: 70vh;
+        width: 100%;
+        background-repeat: no-repeat;
+        margin-bottom: 24px;
+    }
+}
+@media (max-width:1000px ){
+    #product .productBanner{
+        background-image: url(../img/product/bannerproduct.png);
+        background-size:100%;
+        height: 80vh;
+        width: 100%;
+        background-repeat: no-repeat;
+        margin-bottom: 24px;
+    }
+}
+@media (max-width:600px ){
+    #product .productBanner{
+        background-image: url(../img/product/bannerproduct.png);
+        background-size:100%;
+        height: 70vh;
+        width: 100%;
+        background-repeat: no-repeat;
+        margin-bottom: 24px;
+    }
+}
+@media (max-width:500px ){
+    #product .productBanner{
+        background-image: url(../img/product/bannerproduct.png);
+        background-size:100%;
+        height: 60vh;
+        width: 100%;
+        background-repeat: no-repeat;
+        margin-bottom: 24px;
+    }
+} */
