--- a/css/detail.css
+++ b/css/detail.css
@@ -13,9 +13,8 @@ body{
     max-width: 1100px;
     margin: 0 auto;
 }
-img{
-    height: 640px;
-    width: 640px;
+.img-showcase img{
+    width: 100%;
     display: block;
 }
 .img-display{
@@ -47,7 +46,7 @@ img{
     padding: 2rem 1rem;
 }
 .product-title{
-    font-size: 3rem;
+    font-size: 1rem;
     text-transform: capitalize;
     font-weight: 700;
     position: relative;
