--- a/detail.css
+++ b/detail.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap');
-
 *{
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
-body{
+
+body
+{
     line-height: 1.5;
 }
+
 .card-wrapper{
     max-width: 1100px;
     margin: 0 auto;
@@ -18,11 +19,12 @@ img{
     display: block;
 }
 .img-display{
+    width: 640px;
     overflow: hidden;
 }
 .img-showcase{
     display: flex;
-    width: 100%;
+    min-width: 100%;
     transition: all 0.5s ease;
 }
 .img-showcase img{
@@ -30,8 +32,12 @@ img{
 }
 .img-select{
     display: flex;
+    width: 640px;
+    height: 640px;
 }
 .img-item{
+    width: 640px;
+    height: 640px;
     margin: 0.3rem;
 }
 .img-item:nth-child(1),
@@ -46,8 +52,7 @@ img{
     padding: 2rem 1rem;
 }
 .product-title{
-    font-size: 3rem;
-    text-transform: capitalize;
+    font-size: 2rem;
     font-weight: 700;
     position: relative;
     color: #12263a;
@@ -86,7 +91,7 @@ img{
 }
 .product-price{
     margin: 1rem 0;
-    font-size: 1rem;
+    font-size: 20px;
     font-weight: 700;
 }
 .product-price span{
@@ -99,7 +104,7 @@ img{
     padding-bottom: 0.6rem;
 }
 .product-detail p{
-    font-size: 0.9rem;
+    font-size: 20px;
     padding: 0.3rem;
     opacity: 0.8;
 }
@@ -110,12 +115,13 @@ img{
 .product-detail ul li{
     margin: 0;
     list-style: none;
-    background: url(shoes_images/checked.png) left center no-repeat;
+    background: url(watches_images/checked.png) left center no-repeat;
     background-size: 18px;
     padding-left: 1.7rem;
     margin: 0.4rem 0;
     font-weight: 600;
     opacity: 0.9;
+    font-size: 20px;
 }
 .product-detail ul li span{
     font-weight: 400;
@@ -153,20 +159,7 @@ img{
     display: flex;
     align-items: center;
 }
-.social-links a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 32px;
-    height: 32px;
-    color: #000;
-    border: 1px solid #000;
-    margin: 0 0.2rem;
-    border-radius: 50%;
-    text-decoration: none;
-    font-size: 0.8rem;
-    transition: all 0.5s ease;
-}
+
 
 @media screen and (min-width: 992px){
     .card{
@@ -175,9 +168,7 @@ img{
         grid-gap: 1.5rem;
     }
     .card-wrapper{
-        height: 100vh;
         display: flex;
-        justify-content: center;
         align-items: center;
     }
     .product-imgs{
